--- a/abdul.html
+++ b/abdul.html
@@ -34,7 +34,7 @@
 
   <h1>BEDUL Tampan</h1>
 
-  <img src="barakamon_background3.jpg">
+  <img src="barakamon_background3.png">
 
   <a href="https://www.google.com/search?q=google+translate&rlz=1C1CHBF_enID889ID889&oq=g&aqs=chrome.1.69i60j0j69i57j69i60l5.3657j0j7&sourceid=chrome&ie=UTF-8">GOOGLE</a>
 
