--- a/abdul.html
+++ b/abdul.html
@@ -32,7 +32,7 @@
   <a href="https://www.youtube.com/watch?v=wOK0h9ausO4">Ke yt</a>
   <br><br>
 
-  <h1>BEDUL</h1>
+  <h1>BEDUL Tampan</h1>
 
   <img src="barakamon_background3.jpg">
 
